feat(vault): encrypt generated SSH keys with passphrases
Support OpenSSH bcrypt/AES encryption across all five algorithms, passphrase confirmation and optional encrypted-vault account storage. Verify interoperability with ssh-keygen and clear owned secret buffers.

Co-Authored-By: Codex <noreply@openai.com>